Added Map Fragment to AddNewClassActivity

--- a/app/src/main/res/layout/content_display_class.xml
+++ b/app/src/main/res/layout/content_display_class.xml
@@ -21,6 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_class"
-        android:id="@+id/empty"/>
+        android:id="@android:id/empty"/>
 
 </FrameLayout>
