--- a/app/src/main/res/layout/activity_edit_view.xml
+++ b/app/src/main/res/layout/activity_edit_view.xml
@@ -15,26 +15,23 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:minHeight="?android:attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_edit_view" />
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|start"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_menu_edit"
-        android:adjustViewBounds="true"
-        app:layout_anchor="@id/toolbar"
-        app:layout_anchorGravity="bottom|left|end"/>
-
-    <include layout="@layout/content_edit_view" />
-
+        android:layout_gravity="bottom|end"
+        />
 
 
 </android.support.design.widget.CoordinatorLayout>
